--- a/app/src/main/res/values/strings_activity_fslogin.xml
+++ b/app/src/main/res/values/strings_activity_fslogin.xml
@@ -12,4 +12,5 @@
     <string name="error_field_required">This field is required</string>
     <string name="agreements_text">By clicking the \"SIGN IN\" button, I agree to Little Family knowing my basic FamilySearch profile information and accessing data about my ancestors from FamilySearch family tree.</string>
     <string name="agreements_text2">Little Family will use this information in accordance with their respective terms of service and privacy policies.</string>
+    <string name="privacy_text">Little Family will not distribute or share any information outside of your device except with FamilySearch.</string>
 </resources>
