Read portraits from FamilySearch

--- a/app/src/main/res/layout/activity_choose_family_member.xml
+++ b/app/src/main/res/layout/activity_choose_family_member.xml
@@ -1,19 +1,35 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#0099cc"
-    tools:context="org.finlayfamily.littlefamily.activities.ChooseFamilyMember">
+    android:layout_height="match_parent"
+    tools:context="org.finlayfamily.littlefamily.activities.ChooseFamilyMember"
+    android:focusable="true"
+    android:paddingTop="50dp">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
-    <GridView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gridViewFamily"
-        android:layout_gravity="center"
-        android:horizontalSpacing="5dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="5dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/title_activity_choose_family_member"
+            android:id="@+id/textView"
+            style="@style/ButtonBar"
+            android:textAlignment="center" />
+
+        <GridView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:id="@+id/gridViewFamily"
+            android:horizontalSpacing="5dp"
+            android:numColumns="auto_fit"
+            android:verticalSpacing="5dp" />
+    </LinearLayout>
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
