--- a/app/src/main/res/layout/activity_choose_family_member.xml
+++ b/app/src/main/res/layout/activity_choose_family_member.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.finlayfamily.littlefamily.activities.ChooseFamilyMember"
-    android:focusable="true"
-    android:paddingTop="50dp">
+    android:focusable="true">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -15,12 +14,16 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="39dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/title_activity_choose_family_member"
             android:id="@+id/textView"
-            style="@style/ButtonBar"
-            android:textAlignment="center" />
+            style="@style/FullscreenActionBarStyle"
+            android:textAlignment="center"
+            android:layout_marginBottom="5dp"
+            android:textColor="@android:color/primary_text_light"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp" />
 
         <GridView
             android:layout_width="wrap_content"
