--- a/app/src/main/res/layout/activity_choose_family_member.xml
+++ b/app/src/main/res/layout/activity_choose_family_member.xml
@@ -30,7 +30,7 @@
             android:layout_height="fill_parent"
             android:id="@+id/gridViewFamily"
             android:horizontalSpacing="5dp"
-            android:numColumns="auto_fit"
+            android:numColumns="@integer/grid_columns"
             android:verticalSpacing="5dp" />
     </LinearLayout>
 
