--- a/app/src/main/res/layout/activity_match_game.xml
+++ b/app/src/main/res/layout/activity_match_game.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.finlayfamily.littlefamily.activities.MatchGameActivity"
-    android:focusable="true">
+    android:focusable="true"
+    android:background="@android:color/background_light">
 
     <GridView
         android:layout_width="fill_parent"
@@ -12,5 +13,6 @@
         android:layout_centerHorizontal="true"
         android:horizontalSpacing="5dp"
         android:numColumns="auto_fit"
-        android:verticalSpacing="5dp" />
+        android:verticalSpacing="5dp"
+        android:background="@android:color/background_light" />
 </FrameLayout>
