--- a/app/src/main/res/layout/person_portait_name.xml
+++ b/app/src/main/res/layout/person_portait_name.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/person_portrait"
         android:layout_gravity="center_horizontal" />
 
