--- a/app/src/main/res/layout/activity_choose_game.xml
+++ b/app/src/main/res/layout/activity_choose_game.xml
@@ -6,7 +6,25 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.finlayfamily.littlefamily.activities.ChooseGameActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/matchGameBtn"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/matchgamebtn"
+        android:onClick="startMatchGame" />
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scratchGameBtn"
+        android:src="@drawable/scratchgamebtn"
+        android:onClick="startScratchGame"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/matchGameBtn"
+        android:layout_toEndOf="@+id/matchGameBtn"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp" />
 </RelativeLayout>
