--- a/LittleFamilyApp/src/main/res/layout/activity_choose_culture.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_culture.xml
@@ -82,4 +82,12 @@
 
     </LinearLayout>
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/play"
+        android:id="@+id/play_button"
+        android:onClick="startDressUpActivity"
+        android:visibility="invisible" />
+
 </LinearLayout>
