overall layout and interaction

--- a/LittleFamilyApp/src/main/res/layout/activity_heritage_dress_up.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_heritage_dress_up.xml
@@ -14,4 +14,14 @@
         android:id="@+id/dress_up_view"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/homeButton"
+        android:src="@drawable/home"
+        android:onClick="gotoHomeScreen"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
