--- a/LittleFamilyApp/src/main/res/layout/activity_scratch_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_scratch_game.xml
@@ -12,4 +12,14 @@
         android:id="@+id/layeredImage"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/homeButton"
+        android:src="@drawable/home"
+        android:onClick="gotoHomeScreen"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
