--- a/LittleFamilyApp/src/main/res/layout/activity_scratch_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_scratch_game.xml
@@ -10,16 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/layeredImage"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/topBarFragment"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/homeButton"
-        android:src="@drawable/home"
-        android:onClick="gotoHomeScreen"
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:id="@+id/topBarFragment"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerHorizontal="true"
+        tools:layout="@layout/fragment_top_bar" />
+
 </RelativeLayout>
