--- a/LittleFamilyApp/src/main/res/layout/activity_match_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_match_game.xml
@@ -1,30 +1,29 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.finlayfamily.littlefamily.activities.MatchGameActivity"
     android:focusable="true"
     android:background="@android:color/background_light">
 
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:id="@+id/topBarFragment"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        tools:layout="@layout/fragment_top_bar" />
+
     <GridView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/gridViewMatch"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:horizontalSpacing="5dp"
         android:numColumns="auto_fit"
         android:verticalSpacing="5dp"
         android:background="@android:color/background_light"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_below="@+id/topBarFragment"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/homeButton"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/home"
-        android:onClick="gotoHomeScreen"
-        android:layout_gravity="right|top" />
-</FrameLayout>
+</RelativeLayout>
