--- a/LittleFamilyApp/src/main/res/layout/activity_choose_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_game.xml
@@ -51,4 +51,17 @@
         android:layout_alignBottom="@+id/coloringGameBtn"
         android:layout_alignRight="@+id/scratchGameBtn"
         android:layout_alignEnd="@+id/scratchGameBtn" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/puzzleGameButton"
+        android:src="@android:drawable/ic_dialog_dialer"
+        android:onClick="startPuzzleGame"
+        android:layout_below="@+id/coloringGameBtn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="24dp"
+        android:layout_alignRight="@+id/coloringGameBtn"
+        android:layout_alignEnd="@+id/coloringGameBtn" />
 </RelativeLayout>
