--- a/LittleFamilyApp/src/main/res/layout/activity_pgvlogin.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_pgvlogin.xml
@@ -58,16 +58,24 @@
                 android:imeOptions="actionUnspecified" android:inputType="textPassword"
                 android:maxLines="1" android:singleLine="true" />
 
-            <EditText
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/default_id"
-                android:hint="@string/default_id_hint" />
+                android:layout_height="wrap_content">
 
-            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
-                android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:text="@string/action_sign_in_short"
-                android:textStyle="bold" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/default_id"
+                    android:hint="@string/default_id_hint"
+                    android:layout_weight="1" />
+
+                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent" android:layout_height="wrap_content"
+                    android:text="@string/action_sign_in_short"
+                    android:textStyle="bold"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
