--- a/LittleFamilyApp/src/main/res/layout/activity_home.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_home.xml
@@ -6,4 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.finlayfamily.littlefamily.activities.HomeActivity">
 
+    <view
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        class="org.finlayfamily.littlefamily.views.SpritedClippedSurfaceView"
+        android:id="@+id/homeView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
