--- a/LittleFamilyApp/src/main/res/layout/activity_scratch_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_scratch_game.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.finlayfamily.littlefamily.activities.ScratchGameActivity">
+    tools:context="org.finlayfamily.littlefamily.activities.ScratchGameActivity"
+    android:background="@drawable/scratch_background">
 
     <org.finlayfamily.littlefamily.views.ScratchView
         android:layout_width="match_parent"
