--- a/LittleFamilyApp/src/main/res/layout/activity_heritage_dress_up.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_heritage_dress_up.xml
@@ -1,10 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
+    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.finlayfamily.littlefamily.activities.HeritageDressUpActivity">
+    tools:context="org.finlayfamily.littlefamily.activities.HeritageDressUpActivity"
+    android:background="@drawable/dressup_background">
 
     <FrameLayout
         android:layout_width="fill_parent"
@@ -19,7 +20,6 @@
         class="org.finlayfamily.littlefamily.views.DressUpView"
         android:id="@+id/dress_up_view"
         android:layout_below="@+id/topBarFragment"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
