--- a/LittleFamilyApp/src/main/res/layout/activity_puzzle_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_puzzle_game.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.finlayfamily.littlefamily.activities.PuzzleGameActivity">
+    tools:context="org.finlayfamily.littlefamily.activities.PuzzleGameActivity"
+    android:background="@drawable/puzzle_background">
 
     <FrameLayout
         android:layout_width="fill_parent"
