--- a/LittleFamilyApp/src/main/res/layout/fragment_loading.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_loading.xml
@@ -13,7 +13,8 @@
             android:layout_gravity="center"
             android:src="@drawable/growing_plant_animation"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:maxHeight="200dp" />
 
         <ImageView
             android:layout_width="wrap_content"
