--- a/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
@@ -9,7 +9,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@android:drawable/ic_menu_close_clear_cancel" />
+        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        android:onClick="adultAuthCancel" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -66,7 +67,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="adultAuthVerify" />
 
     <Button
         android:layout_width="wrap_content"
@@ -77,6 +79,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="adultAuthCancel" />
 
 </RelativeLayout>
