--- a/LittleFamilyApp/src/main/res/layout/fragment_top_bar.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_top_bar.xml
@@ -25,4 +25,13 @@
         android:layout_alignParentStart="true"
         android:src="@drawable/girl"
         android:onClick="onProfileButtonPressed" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/settingsBtn"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:src="@android:drawable/ic_lock_idle_lock"
+        android:onClick="onSettingsButtonPressed" />
 </RelativeLayout>
