--- a/LittleFamilyApp/src/main/res/layout/activity_home.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_home.xml
@@ -1,10 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.finlayfamily.littlefamily.activities.HomeActivity">
+    android:layout_height="match_parent"
+    tools:context="org.finlayfamily.littlefamily.activities.HomeActivity"
+    android:padding="5dp">
 
     <view
         android:layout_width="fill_parent"
