--- a/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:padding="5dp">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -10,7 +11,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:src="@android:drawable/ic_menu_close_clear_cancel"
-        android:onClick="adultAuthCancel" />
+        />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -68,7 +69,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="adultAuthVerify" />
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -80,6 +81,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:onClick="adultAuthCancel" />
+         />
 
 </RelativeLayout>
