--- a/LittleFamilyApp/src/main/res/layout/fragment_top_bar.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_top_bar.xml
@@ -28,7 +28,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/settingsBtn"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
