--- a/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
@@ -1,18 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.finlayfamily.littlefamily.activities.ColoringGameActivity"
-    android:background="@drawable/scratch_background">
+    android:background="@drawable/scratch_background"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:id="@+id/topBarFragment"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         tools:layout="@layout/fragment_top_bar" />
 
     <org.finlayfamily.littlefamily.views.ColoringView
@@ -20,7 +19,13 @@
         android:layout_height="match_parent"
         android:id="@+id/layeredImage"
         android:layout_below="@+id/topBarFragment"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_weight="1"
+         />
 
-</RelativeLayout>
+    <view
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        class="org.finlayfamily.littlefamily.views.WaterColorImageView"
+        android:id="@+id/colorPicker" />
+
+</LinearLayout>
