--- a/LittleFamilyApp/src/main/res/layout/person_search_details.xml
+++ b/LittleFamilyApp/src/main/res/layout/person_search_details.xml
@@ -6,7 +6,7 @@
     android:rowCount="2">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="15dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="M"
@@ -15,7 +15,7 @@
         android:layout_column="0"
         android:capitalize="characters"
         android:layout_marginRight="10dp"
-        android:layout_columnWeight="1" />
+        android:layout_columnWeight="0" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,10 +26,10 @@
             android:layout_row="0"
             android:layout_column="1"
             android:layout_marginRight="10dp"
-            android:layout_columnWeight="2" />
+            android:layout_columnWeight="10" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="RemoteId"
@@ -37,15 +37,15 @@
             android:layout_row="0"
             android:layout_column="2"
             android:layout_marginRight="10dp"
-            android:layout_columnWeight="2" />
+            android:layout_columnWeight="0" />
 
     <CheckBox
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:id="@+id/chkActive"
         android:layout_row="0"
         android:layout_column="3"
-        android:layout_columnWeight="2" />
+        android:layout_columnWeight="0" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -55,7 +55,8 @@
         android:id="@+id/lblBirth"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_columnSpan="3" />
+        android:layout_columnSpan="3"
+        android:layout_columnWeight="10" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -64,6 +65,7 @@
         android:text="PSC"
         android:id="@+id/lblPSC"
         android:layout_row="1"
-        android:layout_column="3" />
+        android:layout_column="3"
+        android:layout_columnWeight="0" />
 
 </GridLayout>
