--- a/LittleFamilyApp/src/main/res/xml/pref_general.xml
+++ b/LittleFamilyApp/src/main/res/xml/pref_general.xml
@@ -39,6 +39,8 @@
     <ListPreference
         android:key="tts_voice"
         android:title="@string/pref_title_tts_voice"
+        android:entries="@array/pref_sync_frequency_titles"
+        android:entryValues="@array/pref_sync_frequency_values"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null" />
 
