--- a/LittleFamilyApp/src/main/res/layout/activity_splash.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_splash.xml
@@ -6,24 +6,28 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.finlayfamily.littlefamily.activities.SplashActivity"
     android:columnCount="1"
-    android:rowCount="2">
+    android:rowCount="2"
+    android:background="#ffffffff">
 
 
-        <ImageView
-            android:layout_width="122dp"
-            android:layout_height="182dp"
-            android:id="@+id/animatedImage"
-            android:src="@drawable/growing_plant_animation"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_rowWeight="1" />
+    <view
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        class="org.finlayfamily.littlefamily.views.SpritedSurfaceView"
+        android:id="@+id/plantView"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_gravity="center" />
 
-        <ImageView
+    <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/splash_logo"
             android:src="@drawable/little_family_logo"
             android:layout_gravity="top|center_horizontal"
-            android:layout_rowWeight="2" />
+            android:layout_rowWeight="2"
+        android:layout_row="1"
+        android:layout_column="0" />
 
 
 
