--- a/LittleFamilyApp/src/main/res/layout/activity_choose_family_member.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_family_member.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.yellowforktech.littlefamilytree.activities.ChooseFamilyMember"
-    android:focusable="true">
+    android:focusable="true"
+    android:background="@drawable/scratch_background">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
